@@ -1,0 +1,3 @@
+ALTER TABLE minuetServer_games ADD settled_pot_coins TINYINT UNSIGNED NOT NULL AFTER player_2_pot_coins;
+
+UPDATE minuetServer_games SET settled_pot_coins = least( player_1_pot_coins, player_2_pot_coins );
